@@ -6,8 +6,8 @@
 #' \tabular{ll}{
 #' Package: \tab Rvcg\cr
 #' Type: \tab Package\cr
-#' Version: \tab 0.13.1.1\cr
-#' Date: \tab 2015-12-29\cr
+#' Version: \tab 0.13.1.2\cr
+#' Date: \tab 2016-01-21\cr
 #' License: \tab GPL\cr
 #' LazyLoad: \tab yes\cr }
 #' 
